# uc3m_tfg_eecicd

./: LICENSE  README.md
demo_app/: README.md
demo_app/docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
demo_app/docs/.doctrees/: environment.pickle  index.doctree  usage.doctree
demo_app/docs/_sources/: usage.rst.txt
demo_app/final_demo_app/: README.md  pyproject.toml  requirements.txt
demo_app/final_demo_app/docs/source/: conf.py  index.rst
demo_app/final_demo_app/kubernetes/: demo_app_ingress.yaml
demo_app/final_demo_app/src/date_comp/: date.py
demo_app/final_demo_app/src/welcome_comp/: Dockerfile  hello.py
demo_app/initial_demo_app/: Jenkinsfile  README.md
demo_app/initial_demo_app/kubernetes/: demo_app_date.yaml  demo_app_welcome.yaml
demo_app/initial_demo_app/src/date_comp/: Dockerfile  date.py
server/: README.md  docker-compose.yml  jenkins-values.yaml
